# model-perf

./: .clang-format  .gitignore  CMakeLists.txt  NOTICE.txt  README.md
cmake/: detect_python.cmake
cpp/load_gen/: CMakeLists.txt  load_gen.cpp  load_gen.h  perf_result.cpp  perf_result.h  python_exports.cpp  query.h  server_load_gen.cpp  server_load_gen.h  single_stream_load_gen.cpp  single_stream_load_gen.h
cpp/test_app_common/: CMakeLists.txt  driver.cpp  driver.h  logger.cpp  logger.h  metrics_collector.h  perf_utils.h  str_utils.cpp  str_utils.h
cpp/test_app_common/ort/: ort_data_conversion.h  ort_session.cpp  ort_session.h
docs/: README.rst  conf.py  index.rst
docs/benchmark/: bert.rst  bert_benchmark.py  bert_report.json  summary.rst
docs/benchmark/gpt/: profile_gpt.py  shape.txt  size.txt  stack.txt
docs/server/: benchmark_sync_sut.py  benchmark_sync_sut.rst  visualization.rst
docs/server/tutorial_tune_ort/: tune_ort.py  tune_ort.rst
examples/: tune_transformers.py
pipelines/: build-package.yml  build-testapp.yml
python/: CMakeLists.txt  README.md  pyproject.toml  setup.py
python/src/model_perf/: __init__.py  globals.py  logger.py  metrics.py  model_runner.py  utils.py
python/src/model_perf/dataset/: __init__.py  dataset.py  dataset_factory.py  json_helper.py  msgpack_helper.py
python/src/model_perf/desktop/: __init__.py  desktop_model_runner.py  test_app.py
python/src/model_perf/mobile/: __init__.py  appcenter_helper.py  appcenter_model_runner.py  appium_local_model_runner.py  avd_model_runner.py  mobile_model_runner.py  performance_helper.py  test_app.py
python/src/model_perf/model/: __init__.py  model_assets.py
python/src/model_perf/server/: __init__.py  async_worker.py  server_model_runner.py  sync_worker.py  worker.py
python/src/model_perf/server/load_gen/: __init__.py
python/src/model_perf/web/: __init__.py  test_app.py  web_driver.py  web_model_runner.py
python/test/desktop/: test_desktop_model_runner.py
python/test/mobile/: README.md  test_appium_client.py  test_json_helper.py  test_metrics.py  test_mobile.py  test_msgpack_helper.py
python/test/resources/: add.onnx  greater.onnx  identity.onnx
python/test/server/: test_flops_torch.py  test_load_gen.py  test_model_runner_async.py  test_model_runner_sync.py  test_ort_tuner.py  test_threads.py
test_apps/android/: .gitignore
test_apps/android/test_app/: .gitignore  README.md  settings.gradle
test_apps/android/test_app/app/: build.gradle
test_apps/android/test_app/app/src/androidTest/java/com/example/modeltestandroid/: ExampleInstrumentedTest.kt
test_apps/android/test_app/app/src/main/: AndroidManifest.xml
test_apps/android/test_app/app/src/main/cpp/: CMakeLists.txt  jni_bindings.cpp
test_apps/android/test_app/app/src/main/java/com/example/modeltestandroid/: MainActivity.kt
test_apps/android/test_app/app/src/main/res/layout/: activity_main.xml
test_apps/android/test_app/app/src/main/res/values/: strings.xml  themes.xml
test_apps/android/test_app/app/src/main/res/values-night/: themes.xml
test_apps/android/test_app/app/src/test/java/com/example/modeltestandroid/: ExampleUnitTest.kt
test_apps/android/test_driver_app/: pom.xml  readme.md  update_pom.py
test_apps/android/test_driver_app/src/main/java/org/example/: Main.java
test_apps/android/test_driver_app/src/test/java/: ModelTest.java
test_apps/ios/test_app/: .gitignore  AppDelegate.h  AppDelegate.m  CMakeLists.txt  Info.plist  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.mm  build_iphoneos.sh  create_package_iphoneos.sh  export.plist  ios-toolchain.cmake  main.mm  test_app.cpp  test_app.h
test_apps/ios/test_app/Base.lproj/: Main.storyboard
test_apps/ios/test_driver_app/: appcenter_test.sh  update_pom.py
test_apps/ios/test_driver_app/src/test/java/: ModelTest.java
test_apps/windows_ort/: CMakeLists.txt  test_app.cpp
